--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
 <html>
   <head>
+
     <title> Coordinate Landscape </title>
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
     <script src="landscape.js"></script>
   </head>
   <body>
-      <h1> Balmoral / Sydney Harbor Abstract ! TITLE ME </h1>
+      <body bgcolor = "#bf665a" >
+      <h1><center> No Country </center></h1>
 
       <div id="p5"></div>
 
-  <img width="800" src="https://media.artgallery.nsw.gov.au/thumbnails/collection_images/4/4385%23%23S.jpg.505x321_q85.jpg"
+    <p>
+    <p>
 
-      <!-- add other HTML in the body if you'd like -->
-      // https://www.artgallery.nsw.gov.au/collection/works/4385/ //
+  <h1> Artist Description:
+    <p>
+  The original painting, "North Head from above Balmoral, Sydney Harbour" (1866) was done by English Australian watercolor painter Conrad Martens.
+  <p>
+  This is a very detailed painting but also represents a very colonial perspective that did not respect the land or its Indigenous inhabitants.
+  <p>
+  My re-interpretation of this painting focused on the basic shapes and colors to convey the base energy but incorporates the colors/ pattern of the Aboriginal flag.
+<p>
+  This is meant to speak to the fact that Australia is stolen land and despite colonial processes, will always be native land with Indigenous peoples.
+<p>
+</h1>
+
+  <img width="800" src="https://media.artgallery.nsw.gov.au/thumbnails/collection_images/4/4385%23%23S.jpg.505x321_q85.jpg">
+
+<p>
+Image Source: https://www.artgallery.nsw.gov.au/collection/works/4385/
+
 
   </body>
 </html>
