--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <p>
   This is meant to speak to the fact that Australia is stolen land and despite colonial processes, will always be native land with Indigenous peoples.
 <p>
+  The title plays with how there was virtually no place for Indigenous Australians in their home , but also speaks to the illegitimacy of the Australian state from a sovereign Indigenous perspective
 </h1>
 
   <img width="800" src="https://media.artgallery.nsw.gov.au/thumbnails/collection_images/4/4385%23%23S.jpg.505x321_q85.jpg">
